// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add-user-theme-provider-to-app-config migration should run successfully 1`] = `
"import { ApplicationConfig } from '@angular/core';
import { provideUserTheme } from '@rxap/ngx-user';

export const appConfig: ApplicationConfig = { providers: [
  provideUserTheme(),
] };
"
`;

exports[`add-user-theme-provider-to-app-config migration should run successfully 2`] = `
"import { ApplicationConfig } from '@angular/core';
import { provideUserTheme } from '@rxap/ngx-user';

export const appConfig = { providers: [provideUserTheme()] };"
`;
